Prevent horizontal scrolling

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,6 +6,7 @@ html {
   flex-direction: column;
   font-family: 'Crimson Text', serif;
   font-size: 16px;
+  overflow-x: hidden;
   width: 100%;
 }
 
